# libsg

./: .clangformat  .flake8  .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py  start_server.sh
conf/: config.yaml  evaluation.yaml  inference.yaml
conf/arch_generator/: arch_generator_mapping.yaml
conf/generator/: atiss.yaml
conf/layout_generator/: atiss_bedroom.yaml  atiss_diningroom.yaml  atiss_livingroom.yaml  diffusion_bedrooms_dim512_nomask_instancond_objfeats_lat32.yaml  diffusion_diningrooms_dim512_nomask_instancond_objfeats_lat32.yaml  diffusion_livingrooms_dim512_nomask_instancond_objfeats_lat32.yaml  instructscene_bedroom_sg2sc_diffusion_objfeat.yaml  instructscene_diningroom_sg2sc_diffusion_objfeat.yaml  instructscene_livingroom_sg2sc_diffusion_objfeat.yaml  layout_mapping.yaml  layoutgpt_bedroom.yaml  layoutgpt_livingroom.yaml
conf/scene_parser/: instructscene_bedroom_sg_diffusion_vq_objfeat.yaml  instructscene_diningroom_sg_diffusion_vq_objfeat.yaml  instructscene_livingroom_sg_diffusion_vq_objfeat.yaml  llm.yaml  parser_mapping.yaml
cpp/: CMakeLists.txt
cpp/vhacd/: CMakeLists.txt  vhacd.cpp
libsg/: api.py  app.py  arch.py  arch_builder.py  assets.py  config.py  embeddings.py  geo.py  io.py  llm.py  object_builder.py  object_placement.py  object_suggestor.py  scene.py  scene_builder.py  scene_parser.py  scene_types.py  simscene.py  simulator.py  test_simulator.py  utils.py
libsg/evaluation/: README.md  generate_renders.py  inference.py  main.py  render.html  utils.py
libsg/model/: __init__.py  atiss.py  layout.py  (+3 more)
(+56 files in other folders)
